[gd_scene load_steps=9 format=3 uid="uid://cok4yfpvf88jv"]

[ext_resource type="Texture2D" uid="uid://d3dkctvw44m6v" path="res://icon.svg" id="1_b6my6"]
[ext_resource type="Script" path="res://enemies/types/basic/ranged.gd" id="1_j0ypw"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_ghg44"]
friction = 0.1
bounce = 0.2

[sub_resource type="CircleShape2D" id="CircleShape2D_tjcgg"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dkeac"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_338ke"]
radius = 256.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xldvv"]
radius = 576.0

[sub_resource type="CircleShape2D" id="CircleShape2D_mm5tc"]
radius = 31.0

[node name="Ranged" type="RigidBody2D" groups=["enemy"]]
mass = 10.0
physics_material_override = SubResource("PhysicsMaterial_ghg44")
gravity_scale = 0.0
script = ExtResource("1_j0ypw")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_b6my6")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
scale = Vector2(0.5, 0.5)
shape = SubResource("CircleShape2D_tjcgg")

[node name="HurtBox" type="Area2D" parent="." groups=["enemy"]]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_dkeac")
debug_color = Color(0.972549, 0, 0.45098, 0.419608)

[node name="stunTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="KitingRangeStart" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitingRangeStart"]
shape = SubResource("CircleShape2D_338ke")
debug_color = Color(0.596078, 0.545098, 0, 0.419608)

[node name="KitingRangeEnd" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitingRangeEnd"]
shape = SubResource("CircleShape2D_xldvv")

[node name="StunRange" type="Area2D" parent="."]
disable_mode = 2
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StunRange"]
shape = SubResource("CircleShape2D_mm5tc")
debug_color = Color(0.596078, 0.372549, 1, 0.419608)

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="stunTimer" to="." method="_on_stun_timer_timeout"]
[connection signal="area_entered" from="KitingRangeStart" to="." method="_on_kiting_range_start_area_entered"]
[connection signal="area_exited" from="KitingRangeEnd" to="." method="_on_kiting_range_end_area_exited"]
[connection signal="body_entered" from="StunRange" to="." method="_on_stun_range_body_entered"]
